package wiki;

public interface WikiComponent {
    void display();
    int getViewCount();
}